--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.15.4",
     "lodash": "^4.17.4",
     "node-fetch": "^1.7.3",
+    "trim-newlines": "^3.0.0",
     "uuid": "^3.1.0",
     "xml": "^1.0.1"
   },
